[tool.poetry]
name = "rajaongkir-py"
version = "0.0.1"
description = "Integrate Rajaongkir API using python"
authors = ["Agung Yuliyanto <agung.96tm@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.8"
requests = "^2.31.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
